--- a/app/views/lotteries/_form.html.slim
+++ b/app/views/lotteries/_form.html.slim
@@ -22,7 +22,7 @@
 
     .mt-6
       = form.label :description, style: 'display: block', class: 'text-zinc-800 font-semibold text-lg'
-      = form.text_area :description, placeholder: description_template, class: 'mt-2 rounded border border-gray-200 h-32 w-full placeholder-gray-300 text-sm', required: true
+      = form.text_area :description, placeholder: t('template.lottery_description'), class: 'mt-2 rounded border border-gray-200 h-32 w-full placeholder-gray-300 text-sm', required: true
 
     .mt-6
       .font-semibold.text-zinc-800.text-lg
