--- a/app/views/lotteries/index.html.slim
+++ b/app/views/lotteries/index.html.slim
@@ -25,7 +25,7 @@
           .bg-gray-500.rounded-full.text-xs.h-4
             | 終了
         - else
-          .bg-blue-900.rounded-full.text-xs.h-4
+          .bg-red-800.rounded-full.text-xs.h-4
             | 開催中
       .text-left.w-full.p-1
         .text-zinc-500
