--- a/app/views/lotteries/_lottery.html.slim
+++ b/app/views/lotteries/_lottery.html.slim
@@ -33,12 +33,12 @@
             = "#{Prize.human_attribute_name(:winners_count)}(#{prize.winners_count})"
         .mt-3
           label.text-sm.border-b.border-dashed.border-gray-500
-            = "#{Prize.human_attribute_name(:winning_email_subject)}"
+            = Prize.human_attribute_name(:winning_email_subject)
           .font-bold.mt-3.
             = prize.winning_email_subject
         .mt-3
           label.text-sm
-            = "#{Prize.human_attribute_name(:winning_email_body)}"
+            = Prize.human_attribute_name(:winning_email_body)
           .mt-3.break-all
             = simple_format(h(prize.winning_email_body))
 
