--- a/app/views/lotteries/_prize_fields.html.slim
+++ b/app/views/lotteries/_prize_fields.html.slim
@@ -2,7 +2,7 @@
 .nested-fields
   .border.border-gray.rounded.mt-3.w-full.p-6
     = f.label :name, style: 'display: block', class: 'text-zinc-800'
-    = f.text_field :name, placeholder: 'プロを目指す人のためのruby入門', class: 'w-full mt-2 rounded border border-gray-200 placeholder-gray-300', required: true
+    = f.text_field :name, placeholder: 'プロを目指す人のためのRuby入門', class: 'w-full mt-2 rounded border border-gray-200 placeholder-gray-300', required: true
 
     .mt-3
       = f.label :winners_count, style: 'display: block', class: 'text-zinc-800'
