footerの上に余白を追加’余白を追加’

--- a/app/views/shared/_footer.html.slim
+++ b/app/views/shared/_footer.html.slim
@@ -1,4 +1,4 @@
-footer
+footer.mt-10
   .h-full.border-t.border-zinc-300.text-center.py-3.text-zinc-500.text-sm
     .my-3
       .flex.justify-center
