名前のplaceholderをわかりやすくした

--- a/app/views/entries/_form.html.slim
+++ b/app/views/entries/_form.html.slim
@@ -21,7 +21,7 @@
       = form.text_field :name,
         required: true,
         class: 'w-full mt-1 text-blue-699 border-gray-300 rounded placeholder-gray-300',
-        placeholder: 'odentakashi'
+        placeholder: '応募太郎'
 
   - if lottery.note_field_enabled
     .mt-3
