--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -18,7 +18,7 @@
       <%= f.email_field :email,
         autocomplete: "email",
         placeholder: "user@example.com",
-        class: "appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none" %>
+        class: "appearance-none border rounded w-full py-2 px-3 text-gray-700 placeholder-gray-300 leading-tight focus:outline-none" %>
     </div>
 
     <div class="mb-4">
