登録して抽選会を開催ボタンの色を調整

--- a/app/views/welcome/index.html.slim
+++ b/app/views/welcome/index.html.slim
@@ -9,7 +9,7 @@
     h1.text-center.font-bold.text-blue-900.text-4xl.mt-6
       | 抽選会をラクに開催
   .mt-11
-    = button_to '登録して抽選会を開催', '/users/sign_up', method: :get, class: 'p-4 bg-blue-900 font-bold h-10 m-auto text-white rounded flex items-center justify-center hover:bg-blue-800'
+    = button_to '登録して抽選会を開催', '/users/sign_up', method: :get, class: 'w-[280px] p-4 bg-red-700 font-bold h-14 m-auto text-white rounded flex items-center justify-center hover:bg-red-800'
     .text-center.m-auto.mt-2.text-gray.text-sm.mt-6
       = button_to '登録済みの方はこちらからログイン', '/users/sign_in', method: :get, class: 'text-blue-900 underline hover:no-underline'
   .mt-11.md:flex.md:justify-center
